<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:background="#ffededed">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/shape_rounded">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:fadeScrollbars="false">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_fillform"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_fillform"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/viewform"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/text_fillform"
                        android:background="#FF3753C3" />

                    <EditText
                        android:id="@+id/height"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/viewform"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:drawableLeft="@drawable/ic_edittext_icon"
                        android:drawableStart="@drawable/ic_edittext_icon"
                        android:ems="10"
                        android:hint="@string/hint_height"
                        android:inputType="number|numberDecimal|numberSigned"
                        android:lines="1"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="#FF3753C3" />

                    <EditText
                        android:id="@+id/length"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/height"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/ic_edittext_icon"
                        android:drawableStart="@drawable/ic_edittext_icon"
                        android:ems="10"
                        android:hint="@string/hint_length"
                        android:inputType="number|numberDecimal|numberSigned"
                        android:lines="1"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="#FF3753C3" />

                    <Button
                        android:id="@+id/button_checkramp"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_below="@id/length"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/shape_colored"
                        android:text="@string/button_checkramp"
                        android:textColor="#FF3753C3"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_dev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/button_checkramp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:text="@string/app_dev"
                        android:textColor="#FF3753C3"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/viewform3"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/text_dev"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="11dp"
                        android:background="#FF3753C3" />

                    <TextView
                        android:id="@+id/text_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/viewform3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="11dp"
                        android:text="@string/text_copyrigth"
                        android:textSize="18sp" />
                </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
