<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffededed"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".About">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/shape_rounded">

        <TextView
            android:id="@+id/text_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/app_dev"
            android:textColor="#FF3753C3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/viewform3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/text_dev"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="11dp"
            android:background="#FF3753C3" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_below="@id/viewform3"
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rounded">

                <TextView
                    android:id="@+id/text_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/about"
                    android:textColor="#ff3c3f41"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </RelativeLayout>
        </ScrollView>

        <View
            android:id="@+id/viewform4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/scroll"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="#FF3753C3" />

        <TextView
            android:id="@+id/text_dev2"
            android:layout_below="@id/viewform4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/rigths"
            android:textColor="#FF3753C3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_version"
            android:layout_below="@id/text_dev2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/version"
            android:textColor="#FF3753C3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>