<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Result"
    android:background="#ffededed">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/shape_rounded">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rounded">

                <TextView
                    android:id="@+id/text_yourresult"
                    android:text="@string/text_yourresult"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/viewform"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/text_yourresult"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#FF3753C3" />

                <View
                    android:id="@+id/viewform2"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:background="#FF3753C3"
                    android:layout_below="@id/viewform"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    />

                <TextView
                    android:id="@+id/info_height"
                    android:text="@string/ramp_height"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_below="@id/viewform"
                    android:layout_marginTop="40dp"
                    android:layout_alignRight="@id/viewform2"
                    android:layout_alignEnd="@id/viewform2"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/result_height"
                    android:textColor="#FF3753C3"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_alignLeft="@id/viewform2"
                    android:layout_alignStart="@id/viewform2"
                    android:layout_below="@id/viewform"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/info_length"
                    android:text="@string/ramp_length"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_below="@id/result_height"
                    android:layout_alignRight="@id/viewform2"
                    android:layout_alignEnd="@id/viewform2"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/result_length"
                    android:textColor="#FF3753C3"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_alignLeft="@id/viewform2"
                    android:layout_alignStart="@id/viewform2"
                    android:layout_below="@id/result_height"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/info_inclination"
                    android:text="@string/ramp_inclination"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_below="@id/info_length"
                    android:layout_alignRight="@id/viewform2"
                    android:layout_alignEnd="@id/viewform2"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/result_inclination"
                    android:textColor="#FF3753C3"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_alignLeft="@id/viewform2"
                    android:layout_alignStart="@id/viewform2"
                    android:layout_below="@id/result_length"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imageResult"
                    android:src="@drawable/ic_ramp_correct"
                    android:layout_below="@id/viewform2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_ramp"/>

                <View
                    android:id="@+id/viewform3"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/imageResult"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="#FF3753C3" />

                <TextView
                    android:id="@+id/text_finalresult"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:layout_below="@id/viewform2"
                    android:layout_marginTop="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fffc1e1e" />

                <Button
                    android:id="@+id/corrigir"
                    android:text="@string/button_corrigir"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size"
                    android:background="@drawable/shape_rounded_button"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/viewform3"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>